YDAL fix jdk 17 problems for build (#55)